--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "homebridge": ">=0.4.36",
-    "os": ""
+    "os": " ",
+    "mqtt": ">=2.15.1"
   },
   "author": "yz88",
   "license": "Apache-2.0",
